add plugin dnf to zsh, change cursor shape kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -22,8 +22,8 @@ initial_window_height 400
 # Bindings
 map ctrl+t new_tab
 map ctrl+w close_tab
-map ctrl+left previous_tab
-map ctrl+right next_tab
+map alt+left previous_tab
+map alt+right next_tab
 
 # Tab
 show_tab_index_in_tab_title yes
@@ -38,6 +38,7 @@ selection_background    #f5e0dc
 # Cursor colors
 cursor                  #f5e0dc
 cursor_text_color       #1e1e2e
+cursor_shape            beam
 
 # URL underline color when hovering with mouse
 url_color               #f5e0dc
