--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,96 +1,58 @@
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
-
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-
 $scriptsDir = $HOME/.config/hypr/scripts
 
 ################
 ### MONITORS ###
 ################
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,highres,auto,1
-
-#env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
-#env = __NV_PRIME_RENDER_OFFLOAD,1
-#env = __VK_LAYER_NV_optimus,NVIDIA_only
 
 ###################
 ### MY PROGRAMS ###
 ###################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
 $menu = /home/bb02/.scripts/rofi/appLauncher.sh
-
 
 #################
 ### AUTOSTART ###
 #################
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-
-exec-once = autocpu-freq --install
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = waybar & swayncfix.sh
+#exec-once = autocpu-freq --install
+#exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = waybar & swaync
 exec-once = $HOME/.scripts/launchBackground.sh
 #exec-once = $HOME/.scripts/randomWallPicker.sh
 exec-once = hyprctl setcursor Bibata-Modern-Classic 18
 exec-once = fcitx5
 exec-once = bash ~/.config/hypr/scripts/suspend.sh
-exec-once = nm-applet
+exec-once = nm-applet & blueman-applet
 
 ############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
 env = XCURSOR_SIZE,18
 env = HYPRCURSOR_SIZE,18
-
 
 #####################
 ### LOOK AND FEEL ###
 #####################
 
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 9
     gaps_out = 9
 
     border_size = 2
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgb(89b4fa) rgb(cba6f7) 45deg 
     col.inactive_border = rgba(203, 166, 247,1)
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false 
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
     layout = dwindle
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 8
 
@@ -106,22 +68,16 @@ decoration {
     col.shadow = rgba(00000059)
     col.shadow_inactive = rgba(00000059)
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
         size = 10
         passes = 3
-        
         vibrancy = 0.1696
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     #bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     #animation = windows, 1, 3, myBezier
     #animation = windowsOut, 1, 2, myBezier, popin 80%
@@ -143,6 +99,7 @@ animations {
   bezier = overshot, 0.05, 0.9, 0.1, 1.05
   bezier = smoothOut, 0.5, 0, 0.99, 0.99
   bezier = smoothIn, 0.5, -0.5, 0.68, 1.5
+  bezier = easeOutQuint,0.23,1,0.32,1
   
   animation = windows, 1, 3, wind, slide
   animation = windowsIn, 1, 2.95, winIn, slide
@@ -151,18 +108,16 @@ animations {
   animation = border, 1, 1, liner
   animation = borderangle, 1, 180, liner, loop #used by rainbow borders and rotating colors
   animation = fade, 1, 1.2, smoothOut
-  animation = workspaces, 1, 2, default
+  animation = workspaces, 1, 1.65, liner, slidefade
+  animation = layersIn, 1, 4, easeOutQuint, popin 50%
+  animation = layersOut, 1, 3, easeOutQuint, slide
 }
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-
-# https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
     disable_splash_rendering = false
     disable_hyprland_logo = true
@@ -173,7 +128,6 @@ misc {
 ### INPUT ###
 #############
 
-# https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = 
     kb_variant =
@@ -193,14 +147,12 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = true
     workspace_swipe_fingers = 3
 }
 
 # Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
@@ -211,10 +163,8 @@ device {
 ### KEYBINDINGSS ###
 ####################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bindr = $mainMod ALT, Q, exec, $HOME/.config/hypr/scripts/Wlogout.sh
@@ -297,24 +247,12 @@ binde = , xf86MonBrightnessDown, exec, $scriptsDir/Brightness.sh --dec
 binde = , xf86MonBrightnessUp, exec, $scriptsDir/Brightness.sh --inc 
 bind = , xf86TouchpadToggle, exec, $scriptsDir/TouchPad.sh #disable touchpad
 
-# Wlogout
-# bind = $mainMod, esc, exec, $HOME/.config/hypr/scripts/Wlogout.sh
-
 # Custom
 bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --swappy 
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this. 
 
@@ -332,8 +270,6 @@ windowrulev2 = move 1528 68, class:^(pomodorolm)$
 
 windowrulev2 = float, title:^(peaclocks)(.*)$
 windowrulev2 = size 498 337, title:^(peaclocks)(.*)$
-
-# remove app initial focus
 
 # focus rofi
 windowrulev2 = stayfocused, class:(Rofi)
@@ -357,16 +293,9 @@ windowrulev2 = pin, title:^(Picture in picture)$
 windowrulev2 = float, title:^(Figure \d+)$, class:(python3)
 windowrulev2 = float, class:(xdg-desktop-portal-gtk)
 
-# windowrulev2 = noinitialfocus,class:^(jetbrains-.*),title:^(win.*) # intellij pop up fix
-# Working Fullscreen
-# windowrulev2 = noborder, fullscreen:1
-# windowrulev2 = float, fullscreen:1
-# windowrulev2 = move onscreen cursor 50% 50%, fullscreen:1
-
-# blur waybar, wlogout
-#layerrule = blur,waybar
 layerrule = blur, logout_dialog
 layerrule = animation smoothIn, rofi
 layerrule = blur, rofi
+layerrule = animation blur, selection
 
 workspace = 2, rounding:false, shadow:false, gapsin:0, gapsout:0, border:false
