--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -27,7 +27,7 @@ map alt+right next_tab
 
 # Tab
 show_tab_index_in_tab_title yes
-tab_title_template "{index} - New Tab"
+tab_title_template "{index} - {title}"
 
 # The basic colors
 foreground              #cdd6f4
@@ -106,7 +106,7 @@ color15 #a6adc8
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="FiraCode Nerd Font Mono"
+font_family      family="FiraCode Nerd Font"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
