March 6th Backup

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,14 +1,7 @@
-# vim:ft=kitty
-
-## name:     Catppuccin Kitty Mocha
-## author:   Catppuccin Org
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
-## blurb:    Soothing pastel theme for the high-spirited!
-
 # General
 background_opacity 0.75
 enable_audio_bell no
+confirm_os_window_close 0
 
 # Decorate
 window_margin_width 11 
@@ -27,7 +20,7 @@ map alt+right next_tab
 
 # Tab
 show_tab_index_in_tab_title yes
-tab_title_template "{index} - {title}"
+tab_title_template "{index}: {title}"
 
 # The basic colors
 foreground              #cdd6f4
@@ -36,9 +29,10 @@ selection_foreground    #1e1e2e
 selection_background    #f5e0dc
 
 # Cursor colors
-cursor                  #f5e0dc
+cursor                  #00ff87
 cursor_text_color       #1e1e2e
-cursor_shape            beam
+cursor_shape            underline
+shell_integration no-cursor 
 
 # URL underline color when hovering with mouse
 url_color               #f5e0dc
