--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,10 +22,10 @@ $menu = /home/bb02/.scripts/rofi/appLauncher.sh
 #exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar & swaync
 exec-once = $HOME/.scripts/launchBackground.sh
-#exec-once = $HOME/.scripts/randomWallPicker.sh
+exec-once = $HOME/.scripts/randomWallPicker.sh
 exec-once = hyprctl setcursor Bibata-Modern-Classic 18
 exec-once = fcitx5
-exec-once = bash ~/.config/hypr/scripts/suspend.sh
+exec-once = bash ~/.config/hypr/scripts/autoSuspend.sh
 exec-once = nm-applet & blueman-applet
 
 ############################
@@ -44,7 +44,8 @@ general {
     gaps_out = 9
 
     border_size = 2
-    col.active_border = rgb(89b4fa) rgb(cba6f7) 45deg 
+    # col.active_border = rgb(89b4fa) rgb(cba6f7) 45deg
+    col.active_border = rgb(a6e3a1) rgb(89b4fa) rgb(b4befe) rgb(cba6f7) rgb(f5c2e7) rgb(f5e0dc) 45deg
     col.inactive_border = rgba(203, 166, 247,1)
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false 
@@ -106,7 +107,7 @@ animations {
   animation = windowsOut, 1, 1.4, smoothOut, slide
   animation = windowsMove, 1, 2.5, wind, slide
   animation = border, 1, 1, liner
-  animation = borderangle, 1, 180, liner, loop #used by rainbow borders and rotating colors
+  animation = borderangle, 1, 120, liner, loop #used by rainbow borders and rotating colors
   animation = fade, 1, 1.2, smoothOut
   animation = workspaces, 1, 1.35, liner, slidefade
   animation = layersIn, 1, 4, easeOutQuint, popin 50%
@@ -167,7 +168,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
-bindr = $mainMod ALT, Q, exec, $HOME/.config/hypr/scripts/Wlogout.sh
+bind = $mainMod SHIFT, Q, exec, $HOME/.config/hypr/scripts/Wlogout.sh
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, F, fullscreen, 0
 bind = $mainMod, E, exec, $fileManager
@@ -237,15 +238,12 @@ bind = $mainMod, h, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Laptop binds
-binde = , xf86KbdBrightnessDown, exec, $scriptsDir/BrightnessKbd.sh --dec #Keyboard brightness Down
-binde = , xf86KbdBrightnessUp, exec, $scriptsDir/BrightnessKbd.sh --inc #Keyboard brightness up
-bind = , xf86Launch1, exec, rog-control-center # ASUS Armory crate button
-bind = , xf86Launch3, exec, asusctl led-mode -n #FN+F4 Switch keyboard RGB profile 
-bind = , xf86Launch4, exec, asusctl profile -n  #FN+F5 change of fan profiles (Quite, Balance, Performance)
-binde = , xf86MonBrightnessDown, exec, $scriptsDir/Brightness.sh --dec 
-binde = , xf86MonBrightnessUp, exec, $scriptsDir/Brightness.sh --inc 
+bindel = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc # volume up
+bindel = , xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec # volume down
+bindl = , xf86AudioMicMute, exec, $scriptsDir/Volume.sh --toggle-mic # mic mute
+bindl = , xf86audiomute, exec, $scriptsDir/Volume.sh --toggle # mute
 bind = , xf86TouchpadToggle, exec, $scriptsDir/TouchPad.sh #disable touchpad
+bindr = , xf86Sleep, exec, systemctl suspend
 
 # Custom
 bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --swappy 
@@ -293,9 +291,12 @@ windowrulev2 = pin, title:^(Picture in picture)$
 windowrulev2 = float, title:^(Figure \d+)$, class:(python3)
 windowrulev2 = float, class:(xdg-desktop-portal-gtk)
 
+layerrule = animation overshot, logout_dialog
 layerrule = blur, logout_dialog
 layerrule = animation smoothIn, rofi
 layerrule = blur, rofi
 layerrule = animation blur, selection
+layerrule = animation overshot, swaync-control-center
+# layerrule = blur, waybar
 
 workspace = 2, rounding:false, shadow:false, gapsin:0, gapsout:0, border:false
